--- a/index.html
+++ b/index.html
@@ -6,28 +6,100 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 
     <title>Food Network Portfolio</title>
 </head>
 
 <body>
-    <section>
-        <div>
-            <h1><span id="color-orange">Skip</span> The Diet,<h1>
-                    <h1>Just Eat Healthy</h1>
-                    <h1> With Food Network</h1>
-                    <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
-        </div>
-        <div>
-            <img src="diet pic.png " alt="">
-        </div>
+    <section class="my-recipies">
+        <section class="first-section">
+            <div class="half-width header-first">
+                <h1 class="header">
+                    <span id="color-orange">Skip</span> The Diet, <br>
+                    Just Eat Healthy <br>
+                    With Food Network
+                    <h1>
 
+                        <p class="paragraph">Imagine you don't need a diet because we provide <br> healthy and delicious
+                            food for
+                            you!
+                        </p>
+                        <a class="link-button" target="-blank" href="https://en.wikipedia.org/wiki/Healthy_diet">See
+                            More</a>
+            </div>
+            <div class="half-width">
+                <img class="first-image" src="diet pic.png " alt="">
+            </div>
+
+        </section>
+        <section class="second-section">
+            <div class="half-width">
+                <img class="second-image" src="Person Image.png" alt="">
+            </div>
+            <div class="half-width header-first">
+                <h2>About Me</h2>
+                <p class="paragraph">I am very eager to know about my first assignment.<br>I know I am very slow
+                    learner.<br> I am trying my best to cope with everyone.<br>It takes almost all day to finish the
+                    modules
+                    but I will try my best.</p>
+                <a class="link-button" target="-blank" href="https://www.linkedin.com/in/naima-yesmin/">See
+                    More</a>
+            </div>
+
+        </section>
+        <div class="my-recipies">
+            <h2 class="header-align">My recipies</h2>
+            <p class="paragraph">Learn how to make fried chicken from one of more than 80 of the best fried chicken
+                recipes. <br>We have buttermilk, garlic, southern fried chicken and more.</p>
+        </div>
+        <section class="third-section">
+            <div class="div-border">
+                <img class="third-sec-img" src="chocolate.jpg" alt="">
+                <h2>chocolate cookie</h2>
+                <p class="paragraph">A chocolate chip cookie is a drop cookie that features chocolate chips or chocolate
+                    morsels as its
+                    distinguishing ingredient.</p>
+            </div>
+            <div class="div-border">
+                <img class="third-sec-img" src="beef.jpg" alt="">
+                <h2>Beef steak</h2>
+                <p class="paragraph">A beefsteak, often called just steak, is a flat cut of beef with parallel faces,
+                    usually cut
+                    perpendicular to the muscle fibers.</p>
+            </div>
+            <div class=" div-border">
+                <img class="third-sec-img" src="butter.png" alt="">
+                <h2>Butter chicken</h2>
+                <p class="paragraph">Butter chicken or murgh makhani is a curry of chicken in a spiced tomato, butter
+                    and cream sauce.
+                </p>
+            </div>
+        </section>
+        <section class="fourth-section">
+            <div class="fourth-section-div">
+                <h2>700k</h2>
+                <p class="paragraph">Youtube Subscribers</p>
+            </div>
+            <div class="fourth-section-div">
+                <h2>2.4m</h2>
+                <p class="paragraph">Instagram Followers</p>
+            </div>
+            <div class="fourth-section-div">
+                <h2>100k</h2>
+                <p class="paragraph">Dribbble Shot Likes</p>
+            </div>
+        </section>
     </section>
-
 </body>
+
+<footer>
+    <section class="footer-section">
+        <h3><span class="dark-orange">Food</span> Network</h3>
+        <p class="copy-right">Eat healthy to live healthy. Live healthy to live happy</p>
+    </section>
+</footer>
+
 
 </html>
