--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                     With Food Network
                     <h1>
 
-                        <p class="paragraph">Imagine you don't need a diet because we provide <br> healthy and delicious
+                        <p class="paragraph-up">Imagine you don't need a diet because we provide <br> healthy and
+                            delicious
                             food for
                             you!
                         </p>
@@ -40,7 +41,7 @@
             </div>
             <div class="half-width header-first">
                 <h2>About Me</h2>
-                <p class="paragraph">I am very eager to know about my first assignment.<br>I know I am very slow
+                <p class="paragraph-up">I am very eager to know about my first assignment.<br>I know I am very slow
                     learner.<br> I am trying my best to cope with everyone.<br>It takes almost all day to finish the
                     modules
                     but I will try my best.</p>
